--- a/index/index.html
+++ b/index/index.html
@@ -7,18 +7,8 @@
     <script src="react.js" charset="utf-8"></script>
   </head>
   <body>
-    <!--<div class="main">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
-      <div>5</div>
-      <div>6</div>
-      <div>7</div>
-      <div>8</div>
-      <div>9</div>
-    </div>-->
     <div id="container" class="container"></div>
+    <div id="root-router"></div>
     <script src="common.js" charset="utf-8"></script>
   </body>
 </html>
